--- a/wp-content/plugins/jf_form/css/joe_form.css
+++ b/wp-content/plugins/jf_form/css/joe_form.css
@@ -1,8 +1,12 @@
 #joe_form_contain{
+    position: absolute;
+    bottom: 0px;
+    right: 63px;
     background-color: #0583b6;
     width: 345px;
     padding: 30px 0px 30px 0px;
-    margin: 50px;
+    margin: 0px;
+    z-index: 100;
 }
 
 #joe_form_row{
@@ -14,7 +18,7 @@
 }
 
 #joe_form_row input{
-    width: 270px;
+    width: 285px;
     -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 15px 0px 15px 15px;
@@ -73,4 +77,5 @@
 #joe_form_err{
     color: #92cd1a;
     padding: 0px 0px 10px 0px;
+    text-align: center;
 }
