--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -32,7 +32,7 @@ b {font-weight: bold;}
     width: 100%;
     margin: 0px auto 0px auto;
     text-align: left;
-    overflow: auto;
+overflow: visible;
 }
 
 #phone_area{
