--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -14,6 +14,12 @@ img {border: 0px;}
 
 b {font-weight: bold;}
 
+#site_container{
+    position: realtive;
+    width: 100%;
+    margin: 0px auto 0px auto;
+}
+
 #logo_area{
     background-color: white;
     position: relative;
@@ -38,20 +44,24 @@ overflow: visible;
 #phone_area{
     position: relative;
     width: 100%;
-    padding: 5px 0px 5px 80px;
+    padding: 5px 0px 5px 0px;
     background-image: url(../../../themes/blankslate/images/phone.png);
     background-repeat: no-repeat;
-    background-position: 30px 9px;
+    background-position: 30px 10px;
     background-color: #eaeaea;
     color: #4c4c4c;
     line-height: 1.5em;
 }
+
+#phone_area_m {padding: 0px 0px 0px 80px;}
 
 .phone_number{font-size: 1.5em;}
 
 #joe_form_contain{
     position: relative;
     right: 0px !important;
+    top: 0px !important;
+    bottom: 0 !important;
     background-color: #0583b6;
     width: 100%;
     padding: 30px 0px 30px 0px;
@@ -69,25 +79,28 @@ overflow: visible;
 
 #hero_area{
     width:100%; 
-    position: relative; 
-    height:297px;
+    position: relative;
 }
 
 #hero_img{
     position: relative;
-    width: 500px;
-    height: 297px;
-    background-image: url(../../../themes/blankslate/images/hero_m.jpg);
+    width: 100%;
+    background-image: url(../../../themes/blankslate/images/hero_m2.jpg);
     background-repeat: no-repeat;
-    margin: 0px auto 0px auto;
+    margin: 0px;
+    padding: 0px;
 }
+
+.hero_m_image{width: 100%; margin: 0px; padding: 0px;}
 
 #promise_area{
     position: relative;
     height: 99px;
     width: 100%;
-    border: 1px solid #e8e8e8;
     background-color: white;
+    border-style: solid;
+    border-width: 1px 0px 1px 0px;
+    border-color: #e8e8e8;
 }
 
 #promise{
@@ -126,9 +139,11 @@ overflow: visible;
     position: relative;
     width: 100%;
     margin: 0px;
-    padding: 0px 30px 50px 30px;
+    padding: 0px 0px 50px 0px;
     background-color: #ebebeb;
 }
+
+#content_mobile{padding: 0px 30px 30px 30px;}
 
 #content_contain p{
     font-size: 1.3em;
@@ -145,10 +160,10 @@ overflow: visible;
 
 #footer_bar{
     position: relative;
-    width: 100%;
     height: 510px;
     color: white;
     padding: 50px 30px 00px 30px;
+    font-size: .8em;
 }
 
 #footer_bar #left_side{
@@ -174,6 +189,7 @@ overflow: visible;
     width: 100%;
     height: 205px;
     background-color: white;
+    font-size: .8em;
 }
 
 .footheight{height: 205px;}
@@ -211,6 +227,6 @@ overflow: visible;
     width: 45%;
     color: #000;
     border-style: solid;
-    border-width: 0px 0px 0px 1px;
+    border-width: 0px 0px 0px 0px;
     border-color: #f2f2f2;
 }
