--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -38,7 +38,7 @@ b {font-weight: bold;}
     width: 100%;
     margin: 0px auto 0px auto;
     text-align: left;
-overflow: visible;
+    overflow: hidden;
 }
 
 #phone_area{
@@ -69,10 +69,13 @@ overflow: visible;
     text-align: center;
 }
 
+#joe_form_row input, #joe_form_select, #joe_form_select select, .submit_button{width: 75% !important;}
+
+
 #joe_form_mobile{
     position: relative;
     background-color: #0583b6;
-    width: 345px;
+    width: 100%;
     padding: 30px 0px 30px 0px;
     margin: 0px auto 0px auto;
 }
@@ -105,6 +108,7 @@ overflow: visible;
 
 #promise{
     padding: 20px 30px 20px 30px;
+    font-size: .8em;
 }
 
 #title_area{
@@ -133,6 +137,7 @@ overflow: visible;
     background-position: 50% 20px;
     background-repeat: no-repeat;
     background-color: white;
+    display: none;
 }
 
 #content_contain{
@@ -189,7 +194,7 @@ overflow: visible;
     width: 100%;
     height: 205px;
     background-color: white;
-    font-size: .8em;
+    font-size: .7em;
 }
 
 .footheight{height: 205px;}
@@ -198,7 +203,7 @@ overflow: visible;
     position: absolute;
     left: 0px;
     top: 20px;
-    width: 45%;
+    width: 40%;
     height: 50px;
     padding: 10px 0px 0px 30px;
     color: #000;
@@ -212,11 +217,11 @@ overflow: visible;
     position: absolute;
     left: 30px;
     top: 90px;
-    width: 100%;
+    width: 80%;
     padding: 10px 0px 0px 0px;
     color: #000;
     border-style: solid;
-    border-width: 0px 0px 0px 0px;
+    border-width: 1px 0px 0px 0px;
     border-color: #f2f2f2;
 }
 
