--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -17,7 +17,7 @@ b {font-weight: bold;}
 #site_container{
     position: realtive;
     width: 100%;
-    margin: 0px auto 0px auto;
+    margin: 0px;
 }
 
 #logo_area{
@@ -56,29 +56,6 @@ b {font-weight: bold;}
 #phone_area_m {padding: 0px 0px 0px 80px;}
 
 .phone_number{font-size: 1.5em;}
-
-#joe_form_contain{
-    position: relative;
-    right: 0px !important;
-    top: 0px !important;
-    bottom: 0 !important;
-    background-color: #0583b6;
-    width: 100%;
-    padding: 30px 0px 30px 0px;
-    margin: 0px;
-    text-align: center;
-}
-
-#joe_form_row input, #joe_form_select, #joe_form_select select, .submit_button{width: 75% !important;}
-
-
-#joe_form_mobile{
-    position: relative;
-    background-color: #0583b6;
-    width: 100%;
-    padding: 30px 0px 30px 0px;
-    margin: 0px auto 0px auto;
-}
 
 #hero_area{
     width:100%; 
@@ -234,4 +211,94 @@ b {font-weight: bold;}
     border-style: solid;
     border-width: 0px 0px 0px 0px;
     border-color: #f2f2f2;
+}
+
+
+/* MOBILE FORM STYLES */
+
+#joe_form_contain{
+    position: relative;
+    left: 0px !important;
+    background-color: #0583b6;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+
+#joe_form_mobile{
+    padding: 30px 0px 30px 30px;
+    /*padding: 0px;*/
+}
+
+#joe_form_row{
+    width: 100%; 
+    position: relative; 
+    text-align: left;
+    padding: 0px;
+    margin: 0px;
+}
+
+#joe_form_row input{
+    width: 80%;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 15px 0px 15px 15px;
+    margin: 0px 0px 5px 0px;
+    border: 0px;
+    color: #999999;
+    font-size: 1em;
+    
+}
+
+.joe_form_title{
+    position: relative;
+    width: 199px;
+    height: 29px;
+    background-repeat: no-repeat;
+    margin: 0px 0px 20px -10px;
+}
+
+#joe_form_select{
+    overflow:hidden; /* this hides the select's drop button */
+    padding:0; 
+    margin:0px 0px 5px 0px; 
+    /*background: white url(formelements-select.png) no-repeat bottom right;
+     this is the new drop button, in image form */
+    background: white url(../images/select.gif);
+    background-position: 98% 50%;
+    background-repeat: no-repeat;
+    /*background-attachment: fixed;*/
+    width:85%; 
+    -moz-border-radius: 5px;
+    border-radius: 5px; 
+    /*box-shadow: 0 1px 3px rgba(0,0,0,0.2); */
+    border: solid 0px #ccc;
+}
+
+#joe_form_select select{
+    width:85% /* this percentage effectively extends the drop down button out of view */; 
+    background-color:transparent /* this hides the select's background making any styling visible from the div */; 
+    background-image:none; 
+    -webkit-appearance: none /* this is required for Webkit browsers */; 
+    border:none; 
+    box-shadow:none; 
+    padding: 15px 0px 15px 15px; /* padding should be added to the select, not the div */
+    color: #999999;
+    font-size: 1em;
+    margin: 0px 0px 5px 0px;
+}
+
+.submit_button{
+    color: white !important;
+    background-color: #92cd1a;
+    width: 85% !important;
+    font-size: 1.5em !important;
+    margin: 20px;
+    cursor: pointer;
+}
+
+#joe_form_err{
+    color: #92cd1a;
+    padding: 0px 0px 10px 0px;
+    text-align: center;
 }
