--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -5,7 +5,6 @@ body{
     font-family: arial, helvetica, sans-serif;
     font-size: 14px;
     line-height: 19px;
-    background-color: #000;
 }
 
 p {margin: 0px 0px 20px 0px;}
@@ -301,4 +300,131 @@ b {font-weight: bold;}
     color: #92cd1a;
     padding: 0px 0px 10px 0px;
     text-align: center;
+}
+
+
+#aboutUs_btn{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+    border: 2px solid #0583b6;
+    border-radius: 25px 25px 25px 25px;
+    width: 110px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    color: #0583b6;
+    font-size: 0.9em;
+    
+}
+
+#alt_site_contain{
+    position: relative;
+    width: 1149px;
+    margin: 0px auto 0px auto;
+}
+
+#alt_hero_area{
+    width:1149px; 
+    position: relative;
+    margin: 0px auto 0px auto;
+    height:288px;
+    background-image: url(../../../themes/blankslate/images/hdr_medical_assist.jpg);
+    background-repeat: no-repeat;
+    border-color: #f1f1f1;
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+}
+
+#alt_hero_img{
+    position: relative;
+    width: 1149px;
+    height: 288px;
+    background-image: url(../../../themes/blankslate/hdr_medical_assist.jpg);
+    background-repeat: no-repeat;
+}
+
+#alt_form_section{
+    position: absolute;
+    top: -8px;
+    right: 60px;
+    width: 350px;
+    z-index: 105;
+}
+
+#alt_title_area{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: #f2f2f2;
+}
+
+#alt_title_area h1 {
+    font-size: 25px;
+    font-weight: bold;
+    text-indent: 90px;
+    line-height: 100px;
+}
+
+#alt_site_contain ul{
+    font-size: 1.3em;
+    line-height: 1.4em;
+    list-style: square outside url(../../../themes/blankslate/images/list_square.gif);
+    margin: 0px 0px 15px 20px;
+}
+
+#alt_site_contain li{
+    margin-bottom: 15px;
+}
+
+#alt_content_contain{
+    position: relative;
+    width: 550px;
+    margin: 40px 0px 40px 90px; 
+}
+
+#alt_content_contain p{
+    font-size: 1.3em;
+    line-height: 1.3em;
+    margin-bottom: 35px;
+}
+
+#alt_footer{
+    position: relative;
+    width: 1149px;
+    margin: 0px auto 20px auto;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+#alt_footer p{
+    font-size: 1em;
+    line-height: 1.3em;
+    margin-bottom: 35px;
+}
+
+#alt_footer a{
+    color: #000;
+}
+
+.blue{
+    color: #0583b6;
+}
+
+.smallprint{
+    color: #737373;
+    font-size: .7em !important;
+    line-height: 1.3em;
+    text-align: left;
+    padding: 0px 0px 0px 90px;
+    margin: 0px 0px 10px 0px !important;
+}
+
+#alt_footer .address{
+    font-weight: bold;
+    font-size: 1.3em;
+    line-height: 1.5em;
 }
