Created all templates

--- a/wp-content/plugins/shortcodes/css/joe_shortcodes.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes.css
@@ -235,6 +235,30 @@ b {font-weight: bold;}
     border-width: 2px 0px 0px 0px;
 }
 
+#alt_hero_area_drug{
+    width:1149px; 
+    position: relative;
+    margin: 0px auto 0px auto;
+    height:288px;
+    background-image: url(../../../themes/blankslate/images/hdr_drug.jpg);
+    background-repeat: no-repeat;
+    border-color: #f1f1f1;
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+}
+
+#alt_hero_area_computer{
+    width:1149px; 
+    position: relative;
+    margin: 0px auto 0px auto;
+    height:288px;
+    background-image: url(../../../themes/blankslate/images/hdr_computer.jpg);
+    background-repeat: no-repeat;
+    border-color: #f1f1f1;
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+}
+
 #alt_hero_img{
     position: relative;
     width: 1149px;
