--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -435,7 +435,7 @@ b {font-weight: bold;}
 }
 
 #alt_footer .address{
-    font-weight: bold;
+    font-weight: normal;
     font-size: 1.3em;
     line-height: 1.5em;
 }
