--- a/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes_mobile.css
@@ -13,7 +13,9 @@ img {border: 0px;}
 
 b {font-weight: bold;}
 
-h2 {color:#92cd1a;}
+h1 {font-weight: bold; font-size: 1.5em; margin: 0px 0px 25px 0px;}
+
+h2 {color:#92cd1a;font-weight: bold; font-size: 1.3em; margin: 0px 0px 20px 0px;}
 
 #site_container{
     position: realtive;
