--- a/wp-content/plugins/shortcodes/css/joe_shortcodes.css
+++ b/wp-content/plugins/shortcodes/css/joe_shortcodes.css
@@ -36,6 +36,8 @@ h2 {color:#92cd1a;font-weight: bold; font-size: 1.3em; margin: 0px 0px 20px 0px;
     margin: 20px 20px 0px 90px;
 }
 
+.drug_text{display: none;}
+
 #site_contain
 {
     position: relative;
